fixed 'course' in confirm-delete view

--- a/django_quiz/quiz/templates/quiz/home.html
+++ b/django_quiz/quiz/templates/quiz/home.html
@@ -9,62 +9,62 @@
     </form> {% endcomment %}
 
     <div class="row searchFilter">
-    <div class="col-sm-12">
-    <div class="input-group">
-        <div id="filterTab" class="container">	
-            <ul class="nav nav-tabs">
-                <li class="active">
-                    <a class="nav-link active" href="#1" data-toggle="tab">Course</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#2" data-toggle="tab">Question</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#3" data-toggle="tab">Author</a>
-                </li>
-            </ul>
-            <div class="tab-content ">
-                <div class="tab-pane active" id="1">
-                    <input type="text" id="courseInput" class="form-control" onkeyup="filterCourseFunction()" placeholder="Search course...">
-                </div>
-                <div class="tab-pane" id="2">
-                    <input type="text" id="questionInput" class="form-control" onkeyup="filterQuestionFunction()" placeholder="Search question...">
-                </div>
-                <div class="tab-pane" id="3">
-                    <input type="text" id="authorInput" class="form-control" onkeyup="filterAuthorFunction()" placeholder="Search author...">
+        <div class="col-sm-12">
+            <div class="input-group">
+                <div id="filterTab" class="container">	
+                    <ul class="nav nav-tabs">
+                        <li class="active">
+                            <a class="nav-link active" href="#1" data-toggle="tab">Course</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#2" data-toggle="tab">Question</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#3" data-toggle="tab">Author</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content ">
+                        <div class="tab-pane active" id="1">
+                            <input type="text" id="courseInput" class="form-control" onkeyup="filterCourseFunction()" placeholder="Search course...">
+                        </div>
+                        <div class="tab-pane" id="2">
+                            <input type="text" id="questionInput" class="form-control" onkeyup="filterQuestionFunction()" placeholder="Search question...">
+                        </div>
+                        <div class="tab-pane" id="3">
+                            <input type="text" id="authorInput" class="form-control" onkeyup="filterAuthorFunction()" placeholder="Search author...">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 
     <!-- Quizzes -->
     <div id="myItems">
-    {% for quiz in quizzes %}  {% comment %}  {% for quiz in quizzes %} {% for quiz in filter.qs %} {% endcomment %}
-        <div class="card card-signin my-3">
-            <div class="card-body">
-                <article class="media">
-                    <img class="rounded-circle article-img" src="{{ quiz.image.url }}">
-                    <div class="media-body">
-                        <div class="article-metadata">
-                            <a class="mr-2" href="{% url 'user-quiz' quiz.author.username %}">{{ quiz.author }}</a>
-                            <small class="text-muted">{{ quiz.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
+        {% for quiz in quizzes %}  {% comment %}  {% for quiz in quizzes %} {% for quiz in filter.qs %} {% endcomment %}
+            <div class="card card-signin my-3">
+                <div class="card-body">
+                    <article class="media">
+                        <img class="rounded-circle article-img" src="{{ quiz.image.url }}">
+                        <div class="media-body">
+                            <div class="article-metadata">
+                                <a class="mr-2" href="{% url 'user-quiz' quiz.author.username %}">{{ quiz.author }}</a>
+                                <small class="text-muted">{{ quiz.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
+                            </div>
+                            <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.question }}</a></h2>
+                            <p class="article-content">{{ quiz.course.all|join:", " }}</p>
                         </div>
-                        <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.question }}</a></h2>
-                        <p class="article-content">{{ quiz.course.all|join:", " }}</p>
-                    </div>
-                </article>
+                    </article>
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
     </div>
     
-    <script>
+    {% comment %} <script>
         function autoSubmit() {
             document.getElementById("myFilter2").submit();
         }
-    </script>
+    </script> {% endcomment %}
 
     <!-- Filter - JavaScript function -->
     <script>
@@ -136,4 +136,5 @@
             <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
         {% endif %}
     {% endif %}
+
 {% endblock content %}
