--- a/django_quiz/quiz/templates/quiz/quiz_confirm_delete.html
+++ b/django_quiz/quiz/templates/quiz/quiz_confirm_delete.html
@@ -9,7 +9,7 @@
                         <legend class="border-bottom mb-4">
                             <h1>Delete Quiz</h1>
                         </legend>
-                        <h4>Are you sure you want to delete quiz "{{ object.question }}" from course "{{ object.course }}"?</h4>
+                        <h4>Are you sure you want to delete quiz "{{ object.question }}" from course "{{ object.course.all|join:", " }}"?</h4>
                     </fieldset>
                     <div class="form-group">
                         <button class="btn btn-outline-danger" type="submit">Delete</button>
