--- a/django_quiz/quiz/static/quiz/main.css
+++ b/django_quiz/quiz/static/quiz/main.css
@@ -12,12 +12,15 @@ body {
     margin: 0;
   }
   
-  .bg-steel {
-    background-color: #3c7390; /* #5f788a */
+  .bg-blue {
+    background-color: #467DCB;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
   }
-  .bg-steel-2 {
-    background-color: #5f788a;
+  .bg-steel {
+    background-color: #5f788a; 
+  }
+  .bg-django {
+    background-color: #3c7390;
   }
   .bg-cyan {
     background-color: #00fff2;
@@ -39,7 +42,7 @@ body {
   }
   
   .site-header .navbar-nav .nav-link {
-    color: #93d1e8; /* #cbd5db */
+    color: #9ec6ff; /* mobile - #93d1e8 / original -  #cbd5db */
   }
   
   .site-header .navbar-nav .nav-link:hover {
