--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -233,7 +233,7 @@
                 $.ajax({
                     type: "POST",
                     url: "start_quiz/",
-                    data: { 'id': '{{ object.id }}' },
+                    data: { 'id': '{{ object.id }}', 'start_date': '{{ object.start_date }}', 'right_ans': '{{ object.right_ans }}' },
                     dataType: 'json',
                     success: function(data, textStatus) {
                         console.log(data);
