--- a/django_quiz/quiz/templates/quiz/quiz_form.html
+++ b/django_quiz/quiz/templates/quiz/quiz_form.html
@@ -11,6 +11,7 @@
                             Create a Quiz
                         </legend>
                         {{ course_form|bootstrap }}
+                        {{ curso_form|bootstrap }}
                         {{ form|bootstrap }}
                     </fieldset>
                     <div class="form-group">
