fixed create/edit quiz (wasn't saving selected course). Now it saves everything ok, but doesnt remember fields on edit

--- a/django_quiz/quiz/templates/quiz/quiz_form.html
+++ b/django_quiz/quiz/templates/quiz/quiz_form.html
@@ -11,8 +11,7 @@
                             Create a Quiz
                         </legend>
                         {{ course_form|bootstrap }}
-                        {{ curso_form|bootstrap }}
-                        {{ form|bootstrap }}
+                        {% comment %} {{ form|bootstrap }} {% endcomment %}
                     </fieldset>
                     <div class="form-group">
                         <button class="btn btn-outline-info" type="submit">Submit</button>
