made changes to 'Answers-Resuts' processing and changed reset-password template

--- a/django_quiz/users/templates/users/password_reset.html
+++ b/django_quiz/users/templates/users/password_reset.html
@@ -3,7 +3,12 @@
 {% block content %}
     <div class="card card-signin my-3">
         <div class="card-body">
-            <form method="POST">
+
+            <div class="alert alert-info">
+                Please contact the site administrator to reset your password.
+            </div>
+
+            {% comment %} <form method="POST">
                 {% csrf_token %}    <!-- Security Token. It's necessary, otherwise the form won't work. -->
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">
@@ -14,7 +19,7 @@
                 <div class="form-group">
                     <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
                 </div>
-            </form>
+            </form> {% endcomment %}
         </div>
     </div>
 {% endblock content %}
