--- a/django_quiz/quiz/templates/quiz/base.html
+++ b/django_quiz/quiz/templates/quiz/base.html
@@ -30,10 +30,14 @@
     <script type="text/javascript" src="{% static 'quiz/popper.js-1.14.7/dist/poppper.js' %}"></script>
     <script type="text/javascript" src="{% static 'quiz/bootstrap.js' %}"></script>
     <!-- MathJax -->
-    <script type="text/javascript" src="{% static 'quiz/MathJax/MathJax.js?config=TeX-MML-AM_CHTML' %}" async></script>
-    <!-- jqMath -->
-    <script type="text/javascript" src="{% static 'quiz/jqmath-master/dist/jqmath.js' %}" async></script>
-
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        extensions: ["tex2jax.js"],
+        jax: ["input/TeX","output/HTML-CSS"],
+        tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]}
+    });
+    </script>
+    <script type="text/javascript" src="{% static 'quiz/MathJax/MathJax.js' %}"></script>
 
 
     <!-- Title -->
