added 'valid_ans' option to profile, and began implementing export results

--- a/django_quiz/quiz/templates/quiz/base.html
+++ b/django_quiz/quiz/templates/quiz/base.html
@@ -66,6 +66,7 @@
                             <!-- Quiz Dropdown Menu -->
                             <a class="nav-item nav-link" href="{% url 'quiz-create' %}">Create New</a>
                             <a class="nav-item nav-link" href="{% url 'user-quiz' user.username %}">Quizzes</a>
+                            <a class="nav-item nav-link" href="{% url 'quiz-results' %}">Results</a>
                             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
